Fix repository name in API URL

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ h1 {
 
 <script>
 const OWNER = "Kevinl-code";
-const REPO = "Birthday";
+const REPO = "Birthday-";
 const FOLDER = "Images"; // e.g. "images"
 
 const API_URL = `https://api.github.com/repos/${OWNER}/${REPO}/contents/${FOLDER}`;
