--- a/index.html
+++ b/index.html
@@ -5,60 +5,140 @@
 <title>GitHub JPG Gallery</title>
 
 <style>
+/* 🌸 Global */
 body {
-    font-family: Arial, sans-serif;
-    background: #f2f2f2;
+    font-family: 'Poppins', system-ui, sans-serif;
+    background: radial-gradient(circle at top,
+        #ffd6ff,
+        #cdb4db,
+        #bde0fe,
+        #a2d2ff
+    );
+    min-height: 100vh;
     margin: 0;
-    padding: 20px;
+    padding: 30px;
+    color: #fff;
 }
 
+/* ✨ Title */
 h1 {
     text-align: center;
+    font-size: 2.6rem;
+    letter-spacing: 1px;
+    background: linear-gradient(90deg,
+        #ff9a9e,
+        #fad0c4,
+        #fbc2eb,
+        #a18cd1
+    );
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    text-shadow: 0 0 25px rgba(255,255,255,0.5);
 }
 
+/* 🌈 Gallery Grid */
 .gallery {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(220px, 1fr));
-    gap: 20px;
-    margin-top: 30px;
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+    gap: 30px;
+    margin-top: 40px;
 }
 
+/* 💎 Glass Card */
 .card {
-    background: #fff;
-    border-radius: 8px;
+    position: relative;
+    border-radius: 20px;
     overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    backdrop-filter: blur(14px);
+    background: rgba(255, 255, 255, 0.18);
+    box-shadow:
+        0 10px 30px rgba(0, 0, 0, 0.2),
+        inset 0 0 0 1px rgba(255,255,255,0.25);
+    transition: transform 0.35s ease, box-shadow 0.35s ease;
 }
 
+/* 🌈 Rainbow Glow Border */
+.card::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    border-radius: 20px;
+    padding: 2px;
+    background: linear-gradient(135deg,
+        #ffafbd,
+        #ffc3a0,
+        #ffecd2,
+        #fcb69f,
+        #a1c4fd,
+        #c2e9fb
+    );
+    -webkit-mask:
+        linear-gradient(#fff 0 0) content-box,
+        linear-gradient(#fff 0 0);
+    -webkit-mask-composite: xor;
+            mask-composite: exclude;
+    opacity: 0.8;
+}
+
+/* ✨ Hover Pop */
+.card:hover {
+    transform: translateY(-10px) scale(1.04);
+    box-shadow:
+        0 20px 45px rgba(0, 0, 0, 0.35),
+        0 0 35px rgba(255, 182, 193, 0.6);
+}
+
+/* 🖼 Image */
 .card img {
     width: 100%;
-    height: 160px;
+    height: 170px;
     object-fit: cover;
+    border-bottom: 1px solid rgba(255,255,255,0.25);
 }
 
+/* 💕 Buttons Container */
 .card-buttons {
     display: flex;
-    gap: 10px;
-    padding: 10px;
+    gap: 12px;
+    padding: 14px;
 }
 
+/* 🌸 Buttons */
 .card-buttons a {
     flex: 1;
     text-align: center;
-    padding: 8px;
+    padding: 10px;
     font-size: 14px;
-    color: #fff;
+    font-weight: 600;
     text-decoration: none;
-    border-radius: 4px;
+    color: #fff;
+    border-radius: 12px;
+    transition: all 0.3s ease;
+    backdrop-filter: blur(10px);
 }
 
+/* 💎 View Button */
 .view {
-    background: #007bff;
+    background: linear-gradient(135deg, #6a11cb, #2575fc);
+    box-shadow: 0 0 18px rgba(100, 150, 255, 0.7);
 }
 
-.download {
-    background: #28a745;
+.view:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 28px rgba(120, 170, 255, 1);
 }
+
+/* 🍭 Download Button */
+.download {
+    background: linear-gradient(135deg, #ff758c, #ff7eb3);
+    box-shadow: 0 0 18px rgba(255, 120, 180, 0.7);
+}
+
+.download:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 28px rgba(255, 150, 200, 1);
+}
+
 </style>
 </head>
 
